HTML5 + CSS3: Semânticas

--- a/curso-html5/index.html
+++ b/curso-html5/index.html
@@ -6,7 +6,20 @@
 </head>
 <body>
 
-	Cecília Parente
+	<header>
+		<h1>Cecilia Parente</h1>
+	</header>
+
+	<section>
+		<header>
+			<h2>Posts</h2>
+		</header>
+		<article>
+			<h3>Post #01</h3>
+		</article>
+	</section>
+
+	<footer></footer>
 
 </body>
 </html>
