--- a/curso-html5/index.html
+++ b/curso-html5/index.html
@@ -7,6 +7,7 @@
 <body>
 
 	<header>
+		<img src="images/cecilia-parente.jpg" width="15%" alt="Cecilia Parente">
 		<h1>Cecilia Parente</h1>
 	</header>
 
@@ -17,6 +18,7 @@
 		<article>
 			<header>
 				<h3>Post #01</h3>
+				<img src="images/html-code.jpg" alt="Editor de texto contendo código html" width="60%">
 			</header>
 			<p>
 				Suspendisse potenti. Nulla vehicula finibus diam, <a href="https://www.linkedin.com/in/parente-cecilia/ targe" target="_blank">varius blandit</a> tellus mattis vestibulum. Sed ultricies, enim a pellentesque sagittis, <a href="mailto:parente.cecilia@gmail.com">nisi lorem</a> rhoncus eros, in mollis mauris diam sed purus. Vestibulum aliquet, ex ac dignissim pharetra, dui elit euismod velit, a ultricies augue sem sed est. Phasellus tempus ac sem eu sodales. Sed ornare placerat aliquet. Donec gravida magna id dolor fermentum, quis mollis ex blandit.
